# sempr-gui

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  sempr-gui.pc.in
cmake/: FindZeroMQPP.cmake  LibFindMacros.cmake
qrc/: resources.qrc
src/: AbstractInterface.cpp  AbstractInterface.hpp  AnyColumnFilterProxyModel.cpp  AnyColumnFilterProxyModel.hpp  ColoredBranchTreeView.cpp  ColoredBranchTreeView.hpp  ComponentAdderWidget.cpp  ComponentAdderWidget.hpp  CustomDataRoles.hpp  DirectConnection.cpp  DirectConnection.hpp  DirectConnectionBuilder.cpp  DirectConnectionBuilder.hpp  DirectConnectionNode.cpp  DirectConnectionNode.hpp  DragDropTabBar.cpp  DragDropTabBar.hpp  ECDataZMQ.hpp  ECModel.cpp  ECModel.hpp  ExampleClient.cpp  ExampleServer.cpp  ExplanationEdgeItem.cpp  ExplanationEdgeItem.hpp  ExplanationNode.hpp  ExplanationNodeItem.cpp  ExplanationNodeItem.hpp  ExplanationToGraphVisitor.cpp  ExplanationToGraphVisitor.hpp  ExplanationWidget.cpp  ExplanationWidget.hpp  FlattenTreeProxyModel.cpp  FlattenTreeProxyModel.hpp  GeoMapWidget.cpp  GeoMapWidget.hpp  GeometryFilterProxyModel.cpp  GeometryFilterProxyModel.hpp  GeosQCoordinateTranform.cpp  GeosQCoordinateTranform.hpp  GraphEdgeItem.cpp  (+52 more)
ui/: CoordinateDelegate.qml  PointDelegate.qml  PolygonDelegate.qml  componentadderwidget.ui  explanationwidget.ui  geomap.qml  geomap.ui  main.ui  raw_component.ui  retewidget.ui  sparqlwidget.ui  textcomponent.ui  triplecontainer.ui  tripleliveviewwidget.ui  triplepropertymap.ui  triplevector.ui
ui/MapDelegates/: CoordinateDelegate.qml  LineStringDelegate.qml
